# 2026-IQM

./: README.ipynb  README.md  optimizer.py  postprocess.py  postprocessing (1).ipynb  pyproject.toml  random_connected_graph.py  test1.py  test2.py  test3.py  test_sim.py
calibration_data/: cz_gate_errors.py  emerald.json  garnet.json  optimize.py  prx_errors.py  readout_error.py  results.txt
visualization/: create_heatmap.py  generate_emerald.py  generate_garnet.py  heatmap_data.csv  plot_witness_simple.py  plot_witness_with_errors.py
witnesses/: bell_state.py  claude.md  cluster.py  context.md  ghz_witness.py  jungnitsch.py  kruskal.py  linear_mitig_post.py  linear_witness.py  linear_witness_mitigated.py  other.py  postprocess.py  random_graph_witness.py  shadows.py  square_witness.py  stabilizer_witness.py  topology_aware_witness.py
witnesses/failed_ignore/: linear_cheaper.py  shadows.py  square_witness.py  stabilizer_witness.py
working/: linear_witness.py  optimizer.py  simulate.py
