[project]
name = "iqm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.11, < 3.13"
dependencies = [
    "iqm-client[qiskit]>=33.0.3",
    "matplotlib>=3.10.8",
    "mitiq==0.48.1",
    "mthree>=3.0.0",
    "ortools>=9.9.3963",
    "pandas>=2.2.3",
    "ply>=3.11",
    "seaborn>=0.13.2",
]
